# NanoSync

./: .gitignore  Cargo.toml  INSTALLER_PROMPT.md  PLAN.md  PROGRESS.md  README.md  RUST_TUI_REBUILD_SUPERPROMPT.md  analysis_options.yaml  pubspec.yaml  todo_prompt.md
crates/nanosync-core/: Cargo.toml
crates/nanosync-core/src/: automation.rs  device.rs  error.rs  lib.rs  logging.rs  remote.rs  repository.rs  sync.rs  version_control.rs
crates/nanosync-core/src/automation/: runner.rs  service.rs
crates/nanosync-core/src/database/: manager.rs  mod.rs  repository.rs  schema.rs
crates/nanosync-core/src/logging/: service.rs
crates/nanosync-core/src/models/: automation.rs  log.rs  mod.rs  remote.rs  repository.rs  sync.rs  version_control.rs
crates/nanosync-core/src/remote/: manager.rs  smb.rs  unc.rs  webdav.rs
crates/nanosync-core/src/repository/: manager.rs
crates/nanosync-core/src/sync/: engine.rs
crates/nanosync-core/src/utils/: file.rs  hash.rs  ignore.rs  mod.rs  path.rs
crates/nanosync-core/src/version_control/: engine.rs
crates/nanosync-protocol/: Cargo.toml
crates/nanosync-protocol/src/: codec.rs  command.rs  event.rs  lib.rs  message.rs
crates/nanosync-tui/: Cargo.toml
crates/nanosync-tui/src/: app.rs  client.rs  main.rs  ui.rs
crates/nanosync-tui/src/app/: pages.rs
crates/nanosyncd/: Cargo.toml
crates/nanosyncd/src/: config.rs  ipc.rs  main.rs
crates/nanosyncd/src/service/: mod.rs  unix.rs  windows.rs
installer/: build_installer.bat  setup.iss
installer/resources/: license.txt
lib/: main.dart
lib/core/constants/: app_constants.dart  enums.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: binary_optimization.dart  checksum_util.dart  chunked_file_util.dart  device_identity.dart  vc_migration.dart
lib/data/: vc_database.dart
lib/data/database/: database_helper.dart
lib/data/models/: app_log.dart  automation_models.dart  file_snapshot.dart  file_version.dart  history_config.dart  models.dart  remote_connection.dart  remote_directory_item.dart  repository_config.dart  repository_local_settings.dart  sync_log.dart  sync_result.dart  sync_task.dart  vc_branch.dart  vc_commit.dart  vc_file_change.dart  vc_models.dart  vc_repository.dart  vc_staging_entry.dart  vc_stash.dart  vc_tree_entry.dart
lib/data/services/: app_log_service.dart  automation_runner.dart  automation_service.dart  binary_delta_service.dart  file_scanner_service.dart  history_cleaner.dart  new_sync_engine.dart  remote_connection_manager.dart  repository_local_settings_service.dart  repository_manager.dart  smb_service.dart  storage_estimator_service.dart  sync_engine.dart  unc_service.dart  vc_engine.dart  vc_sync_service.dart  version_service.dart  webdav_service.dart
lib/features/about/: about_page.dart
lib/features/automation/: automation_page.dart
lib/features/dashboard/: dashboard_page.dart
lib/features/realtime_monitor/: monitor_page.dart
lib/features/remote/: remote_connections_page.dart
lib/features/repository/: repository_list_page.dart
lib/features/settings/: settings_page.dart
lib/features/sync_log/: log_page.dart
lib/features/task_management/: target_edit_dialog.dart  target_list_page.dart  task_edit_page.dart  task_list_page.dart
lib/features/version_control/: vc_page.dart
lib/features/version_control/widgets/: diff_viewer.dart  file_tree_widget.dart
lib/features/version_management/: version_page.dart
lib/l10n/: app_localizations.dart  app_localizations_zh.dart  app_zh.arb  l10n.dart
lib/shared/providers/: target_provider.dart  task_provider.dart  vc_repository_provider.dart
lib/shared/widgets/: app_shell.dart
lib/shared/widgets/components/: buttons.dart  cards.dart  components.dart  dialogs.dart  indicators.dart  inputs.dart  safe_combo_box.dart
scripts/: build_release.bat
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
