[workspace]
resolver = "2"
members = [
    "crates/nanosync-core",
    "crates/nanosync-protocol",
    "crates/nanosyncd",
    "crates/nanosync-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NanoSync Team"]
license = "MIT"
repository = "https://github.com/nanosync/nanosync"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# CLI/TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
toml = "0.8"
directories = "5.0"

# File monitoring
notify = "6.1"

# HTTP client (for WebDAV)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Crypto & Hashing
sha2 = "0.10"
blake3 = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Hostname and system info
hostname = "0.4"
whoami = "1.4"

# IPC
interprocess = { version = "1.2", features = ["tokio"] }

# Internal crates
nanosync-core = { path = "crates/nanosync-core" }
nanosync-protocol = { path = "crates/nanosync-protocol" }

# Testing
tempfile = "3.10"
