[package]
name = "nanosync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
blake3.workspace = true
directories.workspace = true
toml.workspace = true
hostname.workspace = true
whoami.workspace = true
regex = "1.10"
walkdir = "2.4"
glob = "0.3"
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true